--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ag-grid-react": "^32.2.1",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
